Add multiple entry points

--- a/public/home.html
+++ b/public/home.html
@@ -8,6 +8,8 @@
     <title>Webpacking!</title>
 </head>
 <body>
-<script src="bundle.js"></script>
+<a href="about.html">about</a>
+<script src="common.js"></script>
+<script src="home.js"></script>
 </body>
 </html>
