Add 'vendor' entry point

--- a/public/about.html
+++ b/public/about.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <a href="home.html">home</a>
+<script src="manifest.js"></script>
+<script src="vendor.js"></script>
 <script src="common.js"></script>
 <script src="about.js"></script>
 </body>
