--- a/public/home.html
+++ b/public/home.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <a href="about.html">about</a>
+<script src="manifest.js"></script>
+<script src="vendor.js"></script>
 <script src="common.js"></script>
 <script src="home.js"></script>
 </body>
